[fix] text align center to align navbar

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -13,7 +13,7 @@
   margin: 0;
   display: flex;
   font-size: 2.6rem;
-  margin-right: 1.4rem;
+  text-align: center;
   justify-content: space-around;
   align-items: center;
   color: variables.$navbar-link-color;
